# OpenCV_demo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/swan/opencv_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/swan/opencv_demo/: FaceDetection.java  MainActivity.java
app/src/main/java/org/opencv/: BuildConfig.java
app/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java  OpenCVLoader.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/swan/opencv_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
